updated images links from assets

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="container-fluid my-2">
             <img
               class="img-fuild shadow p-3 mb-5 bg-body rounded"
-              src="/assets/Arman.jpeg"
+              src="./assets/Arman.jpeg"
               style="min-width: 350px; height: 350px"
               alt="Arman Ali Khan"
             />
@@ -233,7 +233,7 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="/assets/CARDUi.png"
+                src="./assets/CARDUi.png"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
@@ -273,7 +273,7 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="/assets/know corona.jpg"
+                src="./assets/know corona.jpg"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
@@ -309,7 +309,7 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="/assets/texttospeech.png"
+                src="./assets/texttospeech.png"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
@@ -348,7 +348,7 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="/assets/todo.jpg"
+                src="./assets/todo.jpg"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
@@ -380,6 +380,7 @@
               </div>
             </div>
           </div>
+          
         </div>
       </div>
 
