--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </div>
       </div>
     </header>
+    
 
     <main class="container text-dark">
       <!------------- ABOUT ME SECTION ---------------------->
@@ -120,9 +121,8 @@
         <div class="row row-cols-1 row-cols-md-2 my-3">
           <div class="container-fluid my-2">
             <img
-              class="img-fuild shadow p-3 mb-5 bg-body rounded"
+              class="img-fuild my-img shadow p-3 mb-5 bg-body rounded my-img"
               src="./assets/Arman.jpeg"
-              style="min-width: 350px; height: 350px"
               alt="Arman Ali Khan"
             />
           </div>
@@ -387,7 +387,7 @@
       <!------------- CONTACT SECTION ---------------------->
       <div class="container-fluid my-4" id="contact_me">
         <h2 class="display-4 my-4 p-3 text-center">Lets get Connected !</h2>
-        <div  class="container-fuild my-4 d-flex flex-row con-wrapper">
+        <div  class="container-fuild con-wrapper my-4 d-flex flex-row ">
           <div class="con-left d-flex flex-column justify-content-center rounded-3">
             <h1 class="display-4">Arman Ali Khan</h1>
             <div class="social-icons d-flex flex-wrap">
@@ -413,13 +413,13 @@
             </div>
           </div>
           <div class="con-right">
-            <form class="bg-dark bg-gradient" action="_self">
+            <form class="bg-dark bg-gradient" action="_self" method="POST" target="_blank">
               <input
                 class="form-elements"
-                type="text"
+                type="text" name="name"
                 placeholder="full name"
               />
-              <input class="form-elements" type="email" placeholder="email" />
+              <input class="form-elements" type="email" name="email" placeholder="email" />
               <textarea
                 class="form-elements"
                 name="queries"
