link style updated

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               thinker, action taker and adaptable to the surrounding.
             </p>
             <button class="btn my-3 btn-outline-secondary align-items-end">
-              <a href="https://drive.google.com/file/d/12Vzjb5eYoBsoYaX5TSIzYU6q8cJfHQE2/view?usp=share_link">Download CV</a>
+              <a style="text-decoration:none;" href="https://drive.google.com/file/d/12Vzjb5eYoBsoYaX5TSIzYU6q8cJfHQE2/view?usp=share_link">Resume</a>
             </button>
           </div>
         </div>
