--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <!-- particles.js  -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
      
-    <!-- countapi -->
-    <script async src="https://api.countapi.xyz/hit/Hunter/khanweb?
-    callback=portfoliVisits"></script>
 
     <!-- font-awesome -->
     <link
@@ -29,7 +26,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <title>Arman Ali Khan</title>
+    <title>Ahmad Shafiuddin</title>
   </head>
 
   <body>
@@ -38,7 +35,7 @@
       <div class="bg-overlay"></div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Arman Ali Khan</a>
+          <a class="navbar-brand" href="#">Ahmad Shafiuddin</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -90,14 +87,15 @@
                     <i class="mdi mdi-pinwheel mdi-spin text-white h1"></i>
                   </div>
                   <h1 class="text-white font-weight-normal home-5-title mb-0">
-                    Hey there I'm Arman Ali Khan
+                    Hey there I'm Ahmad Shafiuddin
                   </h1>
                   <p class="text-white-70 mt-4 f-15 mb-0">
-                    CSE undergraduate at Siksha 'O' Anusandhan,ITER
+                    Freash graduate from KPM Selangor
                   </p>
                   <div class="mt-5">
                     <a
                       class="btn btn-success"
+                      class="nav-link active"
                       type="button"
                       href="#about_me"
                       role="button"
@@ -122,19 +120,19 @@
           <div class="container-fluid my-2">
             <img
               class="img-fuild my-img shadow p-3 mb-5 bg-body rounded my-img"
-              src="./assets/Arman.jpeg"
-              alt="Arman Ali Khan"
+              src="./assets/gambar passport.jpg"
+              alt="Ahmad Shafiuddin"
             />
           </div>
           <div class="container d-flex flex-column my-2">
             <p class="fs-4 pt-lg-5">
-              Hey I'm Arman Ali Khan a CSE undergraduate from
-              Siksha'O'Anusandhan University,ITER.<br />
-              I'm an optimistic person, punctual, trustworthy , critical
-              thinker, action taker and adaptable to the surrounding.
+              Hey I'm Ahmad Shafiuddin a undergraduate from
+              Kolej Professional Mara,KPM.<br />
+              21 years old. Knowledgeable, performance-driven, and detail-oriented Computer Science student who excels at configuring and maintaining hardware and software, developing automation scripts, and resolving any technical support requests. Possess great technological expertise, well devaloped communication skills and important ablity to
+              pertorm well in a team.
             </p>
             <button class="btn my-3 btn-outline-secondary align-items-end">
-              <a style="text-decoration:none;" href="https://drive.google.com/file/d/12Vzjb5eYoBsoYaX5TSIzYU6q8cJfHQE2/view?usp=share_link">Resume</a>
+              <a style="text-decoration:none;" href="https://www.canva.com/design/DAFb2ZKYN54/0BKxRsvjLSxfX9VbJnOzlg/view?utm_content=DAFb2ZKYN54&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
             </button>
           </div>
         </div>
@@ -145,16 +143,16 @@
         <h2 class="display-4 my-4 p-3 text-center">Education</h2>
         <div class="timeline">
           <div class="timeline-row">
-            <div class="timeline-time">May<small>2018</small></div>
+            <div class="timeline-time">December<small>2020</small></div>
             <div class="timeline-content">
               <i class="icon-attachment"></i>
-              <h4>Matriculation</h4>
-              <p>from Jusco School Kadma</p>
+              <h4>Secondary School</h4>
+              <p>from SMA Al-Khairiah</p>
               <div class="thumbs">
                 <img
                   class="img-fluid rounded"
-                  src="./assets/jsk logo.png"
-                  alt="Jusco School Kadma"
+                  src="./assets/logoalkhairiah.png"
+                  alt="SMA Al-Khairiah"
                 />
               </div>
               <div class="">
@@ -165,50 +163,26 @@
           </div>
 
           <div class="timeline-row">
-            <div class="timeline-time">July<small>2020</small></div>
+            <div class="timeline-time">July<small>2023</small></div>
             <div class="timeline-content">
               <i class="icon-code"></i>
-              <h4>Intermediate of Science</h4>
-              <p>From Jusco School Kadma</p>
+              <h4>Diploma in Computer Science</h4>
+              <p>From Kolej Professional Mara</p>
               <div class="thumbs">
                 <img
                   class="img-fluid rounded"
-                  src="./assets/jsk logo.png"
+                  src="./assets/logokpm2.png"
                   alt="Jusco School Kadma"
                 />
               </div>
-              <div class="">
-                <span class="badge badge-pill fs-6">86.4 %</span>
-                <span class="badge badge-pill success">passed</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="timeline-row">
-            <div class="timeline-time">December<small>2020-present</small></div>
-            <div class="timeline-content">
-              <i class="icon-change_history"></i>
-              <h4>B-TECH</h4>
-              <p class="no-margin">
-                From Institute of Techincal Education and Research,<br />Siksha
-                'O' Anusandhan University
-              </p>
-              <div class="thumbs">
-                <img
-                  class="img-fluid rounded"
-                  src="./assets/SOA-PNG.png"
-                  alt="Siksha 'O' Anusandhan University"
-                />
-              </div>
               <div class="my-2">
-                <span class="badge badge-pill fs-5 my-2">SCGPA : 9.13</span>
+                <span class="badge badge-pill fs-5 my-2">CGPA : 3.13</span>
                 <br />
-                <span class="badge badge-pill pursuing">upto 4th sem</span>
+                <span class="badge badge-pill pursuing">upto 6th sem</span>
                 <span class="badge badge-pill pursuing">pursuing</span>
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -233,38 +207,30 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="./assets/CARDUi.png"
+                src="./assets/project lan.png"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
               />
               <div class="card-body" style="height: 150px">
-                <h5 class="card-title fs-2">CardUi</h5>
+                <h5 class="card-title fs-2">Local Area Network</h5>
                 <p class="card-text">
-                  A website that contains Amazing Card User Interface(UI)
-                  Designs and Effects for you to use it on your
-                  Projects/websites.
+                  A project that contains relevant LAN technology,
+                  Designs and Tag for you to view it on my
+                  Projects.
                 </p>
               </div>
               <div class="card-footer">
                 <a
-                  href="https://arman-ali-khan-786.github.io/CardUI/"
+                  href="./projects/LAN project.pkt"
                   class="my-2 m-auto p-2"
                   ><img
-                    src="./assets/preview-logo.png"
+                    src="./assets/icons8-download-50.png"
                     style="min-height: 30px; width: 30px"
                     alt=""
-                /></a>
-                <a
-                  href="https://github.com/Arman-ali-khan-786/CardUI"
-                  class="my-2 m-auto p-2"
-                  ><img
-                    src="./assets/github-logo.png"
-                    style="min-height: 30px; width: 30px"
-                    alt=""
-                /></a>
+                download/></a>
                 <span class="badge rounded-pill mx-1 p-2 bg-secondary"
-                  >open-source</span
+                  >Cisco Packet Tracer</span
                 >
               </div>
             </div>
@@ -273,32 +239,25 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="./assets/know corona.jpg"
+                src="./assets/cable lan.png"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
               />
               <div class="card-body" style="height: 150px">
-                <h5 class="card-title fs-2">Know Corona</h5>
+                <h5 class="card-title fs-2">Technician</h5>
                 <p class="card-text">
-                  A website that shares Information about Covid-19(Corona) and
-                  it related stuffs.
+                  A project that I make a cable 5 meter
+                  long to be used for the staff
                 </p>
               </div>
               <div class="card-footer">
                 <a
-                  href="https://arman-ali-khan-786.github.io/CWC_1styear_project/"
+                  href="https://www.instructables.com/Making-a-Straight-Through-Cable//"
                   class="my-2 m-auto p-2"
+                  target="_blank"
                   ><img
                     src="./assets/preview-logo.png"
-                    style="min-height: 30px; width: 30px"
-                    alt=""
-                /></a>
-                <a
-                  href="https://github.com/Arman-ali-khan-786/CWC_1styear_project"
-                  class="my-2 m-auto p-2"
-                  ><img
-                    src="./assets/github-logo.png"
                     style="min-height: 30px; width: 30px"
                     alt=""
                 /></a>
@@ -309,16 +268,16 @@
           <div class="col p-1">
             <div class="card">
               <img
-                src="./assets/texttospeech.png"
+                src="./assets/mobile login page .jpg"
                 style="height: 250px"
                 class="card-img-top p-2"
                 alt="..."
               />
               <div class="card-body" style="height: 150px">
-                <h5 class="card-title fs-2">Text to Speech</h5>
+                <h5 class="card-title fs-2">Mobile Login Page</h5>
                 <p class="card-text">
-                  A WEBSITE based TextToSpeech converter. As per name it
-                  converts text written into speech.
+                  A page that be sign in and sign up user
+                  using Flutter.
                 </p>
               </div>
               <div class="card-footer">
@@ -389,7 +348,7 @@
         <h2 class="display-4 my-4 p-3 text-center">Lets get Connected !</h2>
         <div  class="container-fuild con-wrapper my-4 d-flex flex-row ">
           <div class="con-left d-flex flex-column justify-content-center rounded-3">
-            <h1 class="display-4">Arman Ali Khan</h1>
+            <h1 class="display-4">Ahmad Shafiuddin</h1>
             <div class="social-icons d-flex flex-wrap">
               <a
                 href="https://www.linkedin.com/in/arman-ali-khan-b44751169/"
