--- a/index.html
+++ b/index.html
@@ -282,15 +282,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://arman-ali-khan-786.github.io/TexttoSpeech/"
-                  class="my-2 m-auto p-2"
-                  ><img
-                    src="./assets/preview-logo.png"
-                    style="min-height: 30px; width: 30px"
-                    alt=""
-                /></a>
-                <a
-                  href="https://github.com/Arman-ali-khan-786/TexttoSpeech"
+                  href="https://github.com/syafizz/firebasecrud"
                   class="my-2 m-auto p-2"
                   ><img
                     src="./assets/github-logo.png"
@@ -300,42 +292,6 @@
                 <span class="badge rounded-pill mx-1 p-2 bg-secondary"
                   >open-source</span
                 >
-              </div>
-            </div>
-          </div>
-
-          <div class="col p-1">
-            <div class="card">
-              <img
-                src="./assets/todo.jpg"
-                style="height: 250px"
-                class="card-img-top p-2"
-                alt="..."
-              />
-              <div class="card-body" style="height: 150px">
-                <h5 class="card-title fs-2">TODO with Crud</h5>
-                <p class="card-text">
-                  This is a ToDo website with some features that stores data on
-                  your browers localStorage
-                </p>
-              </div>
-              <div class="card-footer">
-                <a
-                  href="https://arman-ali-khan-786.github.io/ToDo_List/"
-                  class="my-2 m-auto p-2"
-                  ><img
-                    src="./assets/preview-logo.png"
-                    style="min-height: 30px; width: 30px"
-                    alt=""
-                /></a>
-                <a
-                  href="https://github.com/Arman-ali-khan-786/ToDo_List"
-                  class="my-2 m-auto p-2"
-                  ><img
-                    src="./assets/github-logo.png"
-                    style="min-height: 30px; width: 30px"
-                    alt=""
-                /></a>
               </div>
             </div>
           </div>
@@ -351,20 +307,20 @@
             <h1 class="display-4">Ahmad Shafiuddin</h1>
             <div class="social-icons d-flex flex-wrap">
               <a
-                href="https://www.linkedin.com/in/arman-ali-khan-b44751169/"
+                href="https://www.linkedin.com/in/shafiuddin-yusof-608595269/"
                 target="_blank"
               >
                 <img src="./assets/linkedin.png" alt="linkedin" />
               </a>
-              <a href="" target="_blank">
+              <a href="https://www.discordapp.com/user/401590872438996998" target="_blank">
                 <img src="./assets/discord.png" alt="discord" />
               </a>
-              <a href="https://github.com/Arman-ali-khan-786" target="_blank">
+              <a href="https://github.com/syafizz" target="_blank">
                 <img src="./assets/github.png" alt="github" />
               </a>
               <!-- <a href=""> <img src="./pngs/facebook.png" alt="facebook">   </a> -->
               <a
-                href="https://www.instagram.com/arman__khan__786_/"
+                href="https://www.instagram.com/sudin.kun/"
                 target="_blank"
               >
                 <img src="./assets/instagram.png" alt="instagram" />
@@ -412,7 +368,7 @@
             ><i class="fa fa-facebook"></i
           ></a>
 
-          <!-- Twitter -->
+          <!-- Twitter 
           <a
             class="btn text-white btn-floating m-1 rounded-circle"
             style="background-color: #55acee"
@@ -420,12 +376,13 @@
             role="button"
             ><i class="fa fa-twitter"></i
           ></a>
-
+            -->
+            
           <!-- Instagram -->
           <a
             class="btn text-white btn-floating m-1 rounded-circle"
             style="background-color: #ac2bac"
-            href="https://www.instagram.com/arman__khan__786_/"
+            href="https://www.instagram.com/sudin.kun/"
             role="button"
             ><i class="fa fa-instagram"></i
           ></a>
@@ -434,7 +391,7 @@
           <a
             class="btn text-white btn-floating m-1 rounded-circle"
             style="background-color: #0082ca"
-            href="https://www.linkedin.com/in/arman-ali-khan-b44751169/"
+            href="https://www.linkedin.com/in/shafiuddin-yusof-608595269/"
             role="button"
             ><i class="fa fa-linkedin"></i
           ></a>
@@ -442,7 +399,7 @@
           <a
             class="btn text-white btn-floating m-1 rounded-circle"
             style="background-color: #333333"
-            href="https://github.com/Arman-ali-khan-786"
+            href="https://github.com/syafizz"
             role="button"
             ><i class="fa fa-github"></i
           ></a>
